--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "jimp": "^0.16.2",
-    "tesseract.js": "^4.0.2"
+    "@google-cloud/vision": "^3.1.0",
+    "image-js": "^0.35.2",
+    "img-items": "^0.1.0",
+    "jimp": "^0.16.2"
   }
 }
